# til-26-overflow

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  README.md  TIL-README.md  discord_watcher.py  main.py  pyproject.toml  queue.toml  requirements-dev.txt  rl_autorun.py  submit.sh  til-26-finals-CONTEXT.md
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer-lock.json  devcontainer.json
ae/: Dockerfile  NEXT_SESSION_HANDOVER.md  TODO.md  best.txt  context.md  pyproject.toml  requirements.txt
ae/models/: ppo.pt
ae/src/: __init__.py  ae_manager.py  berserker_base_policy.py  berserker_base_submit_policy.py  berserker_policy.py  constants.py  edited_policy.py  edited_policy_v2.py  layered_rl_policy.py  map_memory.py  pathfinding.py  policy.py  rl_attack_model.py  rl_features.py  rl_policy.py  threat.py
ae/test_env/: ae.ipynb  auto_play.py  bench_idle_opponents.py  benchmark_bomb_economy.py  benchmark_bomb_threshold.py  capture_novice_map.py  diagnose_policy.py  train_attack_dqn.py
ae_rl/: AUTOTUNE.md  HANDOFF.md  README.md  TRAINING_HANDOVER.md  _smoke_edited.py  benchmark.py  commands.txt  common.py  continue_even_nomult.sh  controllers.py  diagnose.py  diagnosis_0755_hard_nomult.md  diverse_opponents.py  eval_selector.py  evolution.py  global_state.py  model.py  pfsp.py  phase1_frozen_core.sh  phase1b_frozen_core_extend.sh  phase2_lottery.sh  ppo.py  review-the-reinforcement-learning-bright-lemur.md  rollout.py  run_summary.py  sp0788_selector.sh  train_population.py  train_stage1_bc.py  train_stage2_ppo.py  train_stage3_league.py  train_stage4_evolution.py  train_stage_asymmetric.py  validation.py
ae_rl/summaries/: 20260526T093522Z.json  20260526T095433Z.json  20260526T101014Z.json  20260526T120155Z.json  (+7 more)
asr/: Dockerfile
asr_dev/: create_manifests.py  export.py  inference.py  parakeet-ctc-0.6b-config.yaml  parakeet-tdt-0.6b-v2-config.yaml  requirements.txt  test_onnx_load.py  train.py
cv/: Dockerfile  requirements.txt
cv_dev/: CATEGORY_DISCREPANCY.txt  CONTEXT.md  adv_rtdetr.py  adv_test.py  consts.py  data_types.py  dedup_objects.py  deimv2_dinov3_l_til26.yml  ecdet_l_til26.yml  ecdet_m_til26.yml  extract_objects.py  generate_synthetic.py  make_dataset.py  make_deimv2_dataset.py  make_synth_dataset.py  make_yolo_dataset.py  save_pretrained_DEIMv2.py  scrape_backgrounds.py  test.py  tidy_objects.py  til26_dataloader.yml  train.py  utils.py
noise/: Dockerfile  noiser.profile  requirements.txt
noise_dev/: IDEAS.md  LIT_REVIEW.md  adv_train.py  analyze_profile.py  attack.py  eval_attack.py  test_noised_img.py
surprise_chal/: PLAN.md  _agent_smoke.py  _dump_observation.py  _make_teleport_replay.py  _verify_defense.py  _verify_mechanics.py  debug_run.py  eval_algo_300.txt  eval_algo_brutal.txt  eval_bastion_300.txt  eval_bastion_brutal.txt  eval_bastion_final.txt  eval_shadow_brutal.txt  evaluate_agent.py  handover.md  seed_eval.py  strat.txt  trace_b67.txt  trace_b67s.txt  trace_b69.txt  trace_b69s.txt  trace_b70.txt  trace_b71.txt  trace_bastion_67.txt  trace_bastion_68.txt
test/: test_cv.py  test_nlp.py  test_noise.py
til-26-finals/: .env.example  README.md  custom-compose.yml  docker-compose-test.yml  finals.sh
til-26-finals/test_competition_server/: Dockerfile  pyproject.toml
til-26-finals/test_competition_server/configs/: config_test.json
til-26-finals/test_competition_server/src/: artifacts.py  config.py  constants.py  domain.py  env_state.py  imaging.py  match.py  missions.py  nlp_eval.py  render_match_video.py  scoring.py  server.py  setup.py  transport.py
til-26-finals/test_competition_server/src/noise_eval/: fairness_checker.py  metrics.py  pipeline.py
til-26-finals/test_competition_server/src/phases/: ae_loop.py  corpus.py
til-26-finals/test_competition_server/src/phases/noise/: __init__.py  driver.py  fairness.py  phase.py
(+130 files in other folders)
