[project]
name = "til-26-overflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jiwer",
  "python-dotenv",
  "requests",
  "tqdm",
  "pycocotools",
  "transformers",
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "numpy",
  "scikit-image",
  "lightning",
  "scikit-learn>=1.8.0",
  "albumentations>=2.0.8",
  "ultralytics>=8.4.48",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
til-26-ae = { path = "./til-26-ae", editable = true }
cv_dev = { path = "cv_dev", editable = true }

[tool.uv.workspace]
members = ["ae"]
