[project]
name = "test-competition-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "aiohttp>=3.12.2",
    "fastapi>=0.115.12",
    "jiwer>=3.1.0",
    "numpy==2.2.3",
    "pillow>=11.2.1",
    "pycocotools>=2.0.8",
    "til-environment",
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.34.2",
    "imageio[ffmpeg]>=2.37.0",
    "scikit-image>=0.25.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
til-environment = { path = "til-26-ae", editable = true }
